Issue #150 - Styled the upload form - Changed Stage of journey to drop down to decrease length of form and remove need for scrolling - Removed extra margin bottom for labels for radio button form inputs

--- a/app/assets/stylesheets/components/form.scss
+++ b/app/assets/stylesheets/components/form.scss
@@ -5,16 +5,34 @@ input.btn.btn-default.btn-success.btn-block {
   display: inline;
 }
 
-.forms-wrapper {
-    overflow: hidden; 
-}
-
-.forms-wrapper [class*="col-"]{
-    margin-bottom: -99999px;
-    padding-bottom: 99999px;
-}
-
 .form-section {
 	background-color: $white;
-	padding: $spacing-unit calc( #{$spacing-unit * 2} );
+	padding: $spacing-unit;
+	padding-bottom: 0;
+}
+
+.form-title {
+	border-bottom: 1px $light-gray solid;
+	margin-bottom: $spacing-unit;
+
+	h2 {
+		font-size: 1.3em;
+		margin-top: 0;
+	}
+}
+
+.form-group {
+	margin-bottom: $spacing-unit;
+}
+
+.form-consent label {
+  font-weight: bold;
+}
+
+label {
+  font-weight: normal;
+
+  &.radio_buttons {
+  	margin-bottom: 0px;
+  }
 }
