--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -28,5 +28,5 @@ $drawingsPadding: 24px;
 
 /***************************/
 /**** Sizes ****/
-$spacing-unit: 15px;
+$spacing-unit: 30px;
 /***************************/
